--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-remove-keybindings-collisions",
   "main": "./lib/atom-remove-keybindings-collisions",
   "version": "0.0.1",
-  "description": "Remove those keybindings from other packages that starts like yours or share the same keystrokes.",
+  "description": "Allows you to remove those keybindings from other packages that collides with your own keystrokes.",
   "repository": "https://github.com/rustico/atom-remove-keybindings-collisions",
   "license": "MIT",
   "engines": {
