--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "atom-remove-keybindings-collisions",
   "main": "./lib/atom-remove-keybindings-collisions",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Allows you to remove those keybindings from other packages that collides with your own keystrokes.",
   "repository": "https://github.com/rustico/atom-remove-keybindings-collisions",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
